# abstract-syntax-tree-experiments-on-datastructures

./: README.md  makefile  pyproject.toml
.github/instructions/: instructions.md
examples/: user_example.json  user_pydantic.py
src/aste/: __init__.py
src/aste/cli/: __init__.py  main.py
src/aste/datastructures/: __init__.py  base.py  builders.py  factory.py
src/aste/utils/: __init__.py  json_schema.py
tests/: test_builders.py  test_factory.py  test_json_schema.py
